crates/toml_edit/tests/fixtures/invalid/inline-table/add.stderr
TOML parse error at line 3, column 1
  |
3 | [a.b]
  | ^
Invalid table header
Dotted key `a` attempted to extend non-table type (inline table)
